Fix stories section overlap with posts below, update PostDetailModal to match PostCard styles

--- a/frontend/src/components/pages/Home/Home.scss
+++ b/frontend/src/components/pages/Home/Home.scss
@@ -103,7 +103,7 @@
 }
 
 .stories-section {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   overflow: visible;
   position: relative;
   display: flex;
